crates/runtime/src/tests/snapshots/query_show_tables_like.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SHOW TABLES LIKE '%TESTING%'\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            ShowTables {
                terse: false,
                history: false,
                extended: false,
                full: false,
                external: false,
                show_options: ShowStatementOptions {
                    show_in: None,
                    starts_with: None,
                    limit: None,
                    limit_from: None,
                    filter_position: Some(
                        Infix(
                            Like(
                                "%TESTING%",
                            ),
                        ),
                    ),
                },
            },
        ),
    ),
    Err(
        NotImplemented(
            "SHOW TABLES FILTER not supported",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
