crates/runtime/src/tests/snapshots/query_show_variables_like.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SHOW VARIABLES LIKE '%TESTING%'\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            ShowVariable {
                variable: [
                    Ident {
                        value: "LIKE",
                        quote_style: None,
                        span: Span(Location(0,0)..Location(0,0)),
                    },
                ],
            },
        ),
    ),
    Err(
        NotImplemented(
            "Unsupported SQL statement: SHOW VARIABLES LIKE '%TESTING%'",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
