crates/runtime/src/tests/snapshots/query_show_warehouses.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SHOW WAREHOUSES\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            ShowVariable {
                variable: [
                    Ident {
                        value: "WAREHOUSES",
                        quote_style: None,
                        span: Span(Location(0,0)..Location(0,0)),
                    },
                ],
            },
        ),
    ),
    Err(
        Plan(
            "'warehouses' is not a variable which can be viewed with 'SHOW'",
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
