crates/runtime/src/tests/snapshots/query_try_cast.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT TRY_CAST('05-Mar-2016' AS TIMESTAMP);\""
snapshot_kind: text
---
(
    Ok(
        Statement(
            Query(
                Query {
                    with: None,
                    body: Select(
                        Select {
                            select_token: TokenWithSpan {
                                token: Word(
                                    Word {
                                        value: "SELECT",
                                        quote_style: None,
                                        keyword: SELECT,
                                    },
                                ),
                                span: Span(Location(0,0)..Location(0,0)),
                            },
                            distinct: None,
                            top: None,
                            top_before_distinct: false,
                            projection: [
                                UnnamedExpr(
                                    Cast {
                                        kind: TryCast,
                                        expr: Value(
                                            SingleQuotedString(
                                                "05-Mar-2016",
                                            ),
                                        ),
                                        data_type: Timestamp(
                                            None,
                                            None,
                                        ),
                                        format: None,
                                    },
                                ),
                            ],
                            into: None,
                            from: [],
                            lateral_views: [],
                            prewhere: None,
                            selection: None,
                            group_by: Expressions(
                                [],
                                [],
                            ),
                            cluster_by: [],
                            distribute_by: [],
                            sort_by: [],
                            having: None,
                            named_window: [],
                            qualify: None,
                            window_before_qualify: false,
                            value_table_mode: None,
                            connect_by: None,
                        },
                    ),
                    order_by: None,
                    limit: None,
                    limit_by: [],
                    offset: None,
                    fetch: None,
                    locks: [],
                    for_clause: None,
                    settings: None,
                    format_clause: None,
                },
            ),
        ),
    ),
    Ok(
        [
            "Projection: TRY_CAST(Utf8(\"05-Mar-2016\") AS Timestamp(Nanosecond, None))",
            "  EmptyRelation",
        ],
    ),
    Ok(
        [
            "+---------------------+",
            "| Utf8(\"05-Mar-2016\") |",
            "+---------------------+",
            "|                     |",
            "+---------------------+",
        ],
    ),
)
