crates/runtime/src/tests/snapshots/query_type_array_construct.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT ARRAY_CONSTRUCT(10, 20, 30)::ARRAY(NUMBER);\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected end of statement, found: (",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: <, found: (",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
