crates/runtime/src/tests/snapshots/query_type_array_size.snap
---
source: crates/runtime/src/tests/queries.rs
description: "\"SELECT ARRAY_SIZE([1,2,3]::ARRAY(NUMBER));\""
snapshot_kind: text
---
(
    Err(
        SQL(
            ParserError(
                "Expected: ), found: (",
            ),
            None,
        ),
    ),
    Err(
        SQL(
            ParserError(
                "Expected: <, found: (",
            ),
            None,
        ),
    ),
    Err(
        Execution(
            "Failed to create logical plan",
        ),
    ),
)
